--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
   <title>jamesostergaard</title>
   <link rel="manifest" href="manifest.json">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M1KHZ3WF8B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-M1KHZ3WF8B');
+</script>
 <body>
   <script src="flutter_bootstrap.js" async></script>
 </body>
